test/classes/constructors/dflt-ctor-generic-uninit-field-const-err-1.good
dflt-ctor-generic-uninit-field-const-err-1.chpl:5: error: unresolved call 'A()'
dflt-ctor-generic-uninit-field-const-err-1.chpl:1: note: candidates are: A(c)
